Change the title and update the social media panel.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jekyll 8bit
+title: Resort46
 description: A Jekyll theme inspired by classic 8bit games.
 remote_theme: julianolf/jekyll-theme-8bit
 logo: nes-kirby
@@ -19,5 +19,7 @@ social:
   whatsapp: tel:+5541999999999
   gmail: mailto:username@domain.net
   linkedin: https://www.linkedin.com/in/username
+  instagram: https://www.instagram.com/resort46.life/
+  soundcloud: https://soundcloud.com/emanuel_tremblay
 disqus:
   shortname: jekyll-theme-8bit
